--- a/index.html
+++ b/index.html
@@ -35,15 +35,23 @@
 
     </section>
 
-    <section id="cv"></section>
+    <section id="cv">
+    <div class="mig">
+
+        <img src="mig.png">
+   <div class="txt">
+    <h1>Hvem er jeg?</h1>
+        <p>Mit navn er Simone Grauer,  jeg er 21år og kommer fra København.  Jeg er en glad og udadvendt pige som</p>
+        <p>læser til multimediedesigner på KEA og går på 1 semester.  Jeg brænder for design af hjemmesider som er brugervenlige. </p></div></div>
+    </section>
     <section id="top"></section>
     <section id="portfolio">
+
         <section id="billeder">
-            <div class="boks1"></div>
-            <div class="boks2"></div>
-            <div class="boks3"></div>
-            <div class="boks4"></div>
-            <div class="boks5"></div>
+            <img src="tema_1.jpg">
+             <img src="tema2.jpg">
+            <img src="tema3.jpg">
+           <img src="tema5-jpg.jpg">
         </section>
 
     </section>
