--- a/html.html
+++ b/html.html
@@ -14,7 +14,7 @@
         <h1> Portfolio af Simone Grauer</h1></section>
     <nav>
         <a href="index.html#forside">Forside</a>
-        <a href="">Portfolio</a>
+        <a href="portfolio">Portfolio</a>
         <a href="">Om mig</a>
      <!-- <a href="">Tema 1 - Grundlæggende HTML</a>
          <a href="">Tema 3 - Grundlæggende video</a>
@@ -25,13 +25,19 @@
         <section id="boks"></section>
 
     </header>
+    <section id="indhold">
     <section id="overskrift">
     <h1> Tema 1 - Grundlæggende HTML</h1>
+        <p>I dette tema skulle vi lave vores egen hjemmeside der er tilpasset efter den stilart vi fik tildelt.</p>
+        <p>Jeg fik stilarten Pop Art som blev brugt omkring 150'erne. Stilarten repræsenterede industrisamfundet og masseproduktion af diverse dagligdagsting.</p>
+        <p>Kendetegn for typografien i stilartperioden, var at ordene blev gjort til lydord og de sprang ind i øjnene på tilskuerne, derudover benyttede kunstnerne sig også af tale -og tænkebobler, hvor typografien var mere nedtonet.</p>
+        <p>Kunstnerne i stilartperioden kunne benytte sig af en bred palette af farver og skabte derfor deres helt egen karakteristiske farveholdning</p>
     </section>
 
      <section id="link_website">
        <p> <a href="http://simonegrauer.dk/kea/01-web/04-responsive/01_04_04_responsive_v3/">01.04.04 Responsive_site_v3</a></p>
     </section>
+        </section>
 
     <section id="Splash">
     </section>
@@ -39,13 +45,25 @@
     <section id="ikon">
     </section>
 
+    <section id="mood"><h1>Moodboard</h1></section>
     <section id="moodboard">
-        <h1>Moodboard</h1>
+
         <img src="moodboard.JPG">
         <img src="moodboard2.JPG">
         <img src="moodboard3.JPG">
     </section>
 
+    <section id="style_indhold">
+    <section id="styletile_tekst">
+    <h1>Styletile</h1>
+        <p>Jeg lavede en styletile hjemmeside, hvor mine skrifttyper samt strørrelse på skriften indgår.</p>
+        <p>Derudover indeholder styletilen mine splashbilleder, ikoner samt farver som blev brugt på min færdige stilart hjemmeside</p>
+    </section>
+
+    <section id="styletile">
+    <p> <a href="http://simonegrauer.dk/kea/01-web/03-ui/01_03_05_styletile_final/styletile.html">Styletile</a> </p>
+    </section>
+    </section>
 
 </body>
 </html>
