--- a/index.html
+++ b/index.html
@@ -31,29 +31,47 @@
     <section id="forside">
         <img src="forside3.jpg"></section>
 
-    <section id="portfolio">
-
-    </section>
-
     <section id="cv">
-    <div class="mig">
+        <div class="mig">
 
-        <img src="mig.png">
-   <div class="txt">
-    <h1>Hvem er jeg?</h1>
-        <p>Mit navn er Simone Grauer,  jeg er 21år og kommer fra København.  Jeg er en glad og udadvendt pige som</p>
-        <p>læser til multimediedesigner på KEA og går på 1 semester.  Jeg brænder for design af hjemmesider som er brugervenlige. </p></div></div>
+            <img src="mig.png">
+            <div class="txt">
+                <h1>Hvem er jeg?</h1>
+                <p>Mit navn er Simone Grauer, jeg er 21år og kommer fra København. Jeg er en glad og udadvendt pige som</p>
+                <p>læser til multimediedesigner på KEA og går på 1 semester. Jeg brænder for design af hjemmesider som er brugervenlige. </p>
+                <button class="button">Se mit CV her</button>
+            </div>
+
+        </div>
     </section>
-    <section id="top"></section>
+
+
     <section id="portfolio">
 
         <section id="billeder">
             <img src="tema_1.jpg">
-             <img src="tema2.jpg">
+            <img src="tema2.jpg">
             <img src="tema3.jpg">
-           <img src="tema5-jpg.jpg">
+            <img src="tema5-jpg.jpg">
+
         </section>
 
     </section>
+
+    <section id="portfolio1">
+
+        <section id="billeder1">
+            <button class="boks1"><p>TEMA 1</p></button>
+            <button class="boks1"><p>TEMA 2</p></button>
+            <button class="boks1"><p>TEMA 3</p></button>
+            <button class="boks1"><p>TEMA 4</p></button>
+
+
+        </section>
+
+    </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <footer>Udarbejdet af Simone Grauer</footer>
 </body>
 </html>
