--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
     <title>Portfolio</title>
 </head>
@@ -11,12 +11,13 @@
 <body>
     <header>
         <section id="logo">
-        <h1> Portfolio af Simone Grauer</h1></section>
-    <nav>
-        <a href="index.html#forside">Forside</a>
-        <a href="">Portfolio</a>
-        <a href="">Om mig</a>
-     <!-- <a href="">Tema 1 - Grundlæggende HTML</a>
+            <h1> Portfolio af Simone Grauer</h1>
+        </section>
+        <nav>
+            <a href="index.html#forside">Forside</a>
+            <a href="">Portfolio</a>
+            <a href="">Om mig</a>
+            <!-- <a href="">Tema 1 - Grundlæggende HTML</a>
          <a href="">Tema 3 - Grundlæggende video</a>
         <a href="">Tema 2 - Animation</a>
         <a href="">Tema 4 - Grundlæggende UX</a>-->
@@ -25,5 +26,54 @@
         <section id="boks"></section>
 
     </header>
+
+    <section id="cph">
+        <section id="cphdox">
+
+            <iframe width="660" height="415" src="https://www.youtube.com/embed/qmETOCBg84g?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></section>
+
+        <section id="christian">
+            <h1>CPH:DOX</h1>
+            <p>Til CPH:DOX skulle vi lave en mini dokumentar som skulle handle om demokrati eller mennesket. Min gruppe valget mennesket som tema.</p>
+            <p>I dokumentaren møder vi en mand som er meget følsom, i det han ikke ser sine børn mere, efter han i en del år har kæmpet om fælles forældremyndighed.</p>
+            <div class="opgave">
+                <p> <a href="opgave%20everydayproject%20F18.pdf">Everydayproject F18.pdf</a></p>
+            </div>
+        </section>
+    </section>
+
+    <section id="afsnit">
+        <h1>Virksomhedspræsentation & redesgin af Café 33</h1>
+    </section>
+    <section id="cafe_redesign">
+        <section id="redesign">
+            <h1>Virksomhedspræsentation af Café 33</h1>
+            <p>I denne virksomhedspræstentation af Café 33, får man en fornemmelse af at være på et værtshus, hvor der er god stemning og højt humør.</p>
+            <p>Derudover gemmer verdens største vodkasamling sig i kælderen.</p>
+            <div class="dokumentation">
+                <p> <a href="http://www.simonegrauer.dk/kea/03-content/03-redesign/docs/">Dokumentationssite</a></p>
+            </div>
+        </section>
+        <section id="virksomhed">
+            <iframe width="660" height="415" src="https://www.youtube.com/embed/NXxIz_SmNqI?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></section>
+    </section>
+
+
+    <section id="con">
+        <div class="cafe">
+            <p>Café 33</p>
+            <img src="cafe33.JPG">
+        </div>
+
+        <div class="cafe_cafe">
+            <p>Redesign af Café 33</p>
+            <img src="nycafe33.JPG">
+        </div>
+    </section>
+
+
+
+    <a href="http://simonegrauer.dk/kea/03-content/03-redesign/site/">Redesgin af Café 33</a>
+    <a href="http://cafe33.dk/">Café 33 hjemmeside</a>
 </body>
 </html>
