indhold og styling

--- a/animation.html
+++ b/animation.html
@@ -3,27 +3,92 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 
 <body>
-    <header>
+     <header>
+
         <section id="logo">
-        <h1> Portfolio af Simone Grauer</h1></section>
-    <nav>
-        <a href="index.html#forside">Forside</a>
-        <a href="">Portfolio</a>
-        <a href="">Om mig</a>
-     <!-- <a href="">Tema 1 - Grundlæggende HTML</a>
-         <a href="">Tema 3 - Grundlæggende video</a>
-        <a href="">Tema 2 - Animation</a>
-        <a href="">Tema 4 - Grundlæggende UX</a>-->
+            <a href="index.html"><h1> Portfolio af Simone Grauer</h1></a>
+        </section>
+        <nav>
+            <ul>
+
+                <li><a href="cv.html">Om mig</a></li>
+                <li><a href="index.html#portfolio">Portfolio</a>
+                <ul>
+                    <li><a href="html.html">Tema 1</a></li>
+                    <li><a href="animation.html">Tema 2</a></li>
+                    <li><a href="video.html">Tema 3</a></li>
+                    <li><a href="ux.html">Tema 4</a></li>
+
+                    </ul>
+
+                </li>
+
+
+            <li><a href="index.html#forside">Forside</a></li>
+
+            </ul>
+
         </nav>
 
-        <section id="boks"></section>
+
 
     </header>
+
+    <section id="dokument">
+        <section id="titelbillede">
+            <img src="titelbilledeai%20-%20Kopi-01.png" alt="titelbillede">
+        </section>
+
+        <section id="knap">
+            <h1>Process til animation</h1>
+            <section id="karakterdesign">
+
+                <p> <a href="02.01.02_Karakterdesign_SimoneGrauer.pdf">02.01.02 - Karakterdesign</a></p>
+            </section>
+
+            <section id="figurer">
+                <p> <a href="http://simonegrauer.dk/kea/02-animation/02_01_04_styletile_simonegrauer/styletile.html#styletile">02.01.04 - Scene & figurer</a></p>
+            </section>
+            <section id="lydsiden">
+                <p><a href="http://simonegrauer.dk/kea/02-animation/020301/">02.03.01 Lydsiden</a></p>
+            </section>
+        </section>
+    </section>
+
+
+<section id="selveanimation">
+
+   <section id="animationoverskrift"> <h1>Den endelige animation</h1>
+      <p>Min animations historie hedder "En tur i Zoo", den handler om en dreng, der genere en løve. Jeg har blandt andet lavet et flowchart og sekvensdiagram, for at få et overblik over hvordan jeg skulle kode javascript for at få animationerne til at køre korrekt.</p>
+    <section id="animation"> <p><a href="02_03_03_Animation_SimoneGrauer.pdf">02.03.03 Animations-opgaven</a></p></section></section>
+
+    <section id="spil">
+
+    <img src="interaktion.JPG" alt="spil">
+    </section></section>
+
+    <section id="boks"></section>
+
+    <section id="privatsnak_snak">
+        <div class="snak">
+
+            <img src="snak.JPG" alt="snak"></div>
+
+        <section id="privattxt">
+            <h1>Privat snak animation</h1>
+            <p>Animationen som splitscreen for at forstærke budskabet om hvor hurtigt man kan dele en besked med andre. Samtidig skal brugeren interagere ved at forsøge at stoppe spredningen af et nøgen billede. Årsagen til denne beslutning er at få brugeren til at forstå, at når et billede først er blevet delt, kan man ikke forhindre det igen. </p>
+            <section id="privat">
+                <p> <a href="http://simonegrauer.dk/kea/02-animation/02_05_01_5_dokumentationssite/">02.05.01 - Endelig aflevering</a></p>
+            </section>
+        </section>
+    </section>
+    <footer><p>Udarbejdet af Simone Grauer</p></footer>
 </body>
 </html>
