--- a/html.html
+++ b/html.html
@@ -4,30 +4,45 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 
 <body>
     <header>
+
         <section id="logo">
-        <h1> Portfolio af Simone Grauer</h1></section>
-    <nav>
-        <a href="index.html#forside">Forside</a>
-        <a href="portfolio">Portfolio</a>
-        <a href="">Om mig</a>
-     <!-- <a href="">Tema 1 - Grundlæggende HTML</a>
-         <a href="">Tema 3 - Grundlæggende video</a>
-        <a href="">Tema 2 - Animation</a>
-        <a href="">Tema 4 - Grundlæggende UX</a>-->
+            <a href="index.html"><h1> Portfolio af Simone Grauer</h1></a>
+        </section>
+        <nav>
+            <ul>
+
+                <li><a href="cv.html">Om mig</a></li>
+                <li><a href="index.html#portfolio">Portfolio</a>
+                <ul>
+                    <li><a href="html.html">Tema 1</a></li>
+                    <li><a href="animation.html">Tema 2</a></li>
+                    <li><a href="video.html">Tema 3</a></li>
+                    <li><a href="ux.html">Tema 4</a></li>
+
+                    </ul>
+
+                </li>
+
+
+            <li><a href="index.html#forside">Forside</a></li>
+
+            </ul>
+
         </nav>
 
-        <section id="boks"></section>
+
 
     </header>
     <section id="indhold">
     <section id="overskrift">
-    <h1> Tema 1 - Grundlæggende HTML</h1>
+    <h1>Grundlæggende HTML</h1>
         <p>I dette tema skulle vi lave vores egen hjemmeside der er tilpasset efter den stilart vi fik tildelt.</p>
         <p>Jeg fik stilarten Pop Art som blev brugt omkring 150'erne. Stilarten repræsenterede industrisamfundet og masseproduktion af diverse dagligdagsting.</p>
         <p>Kendetegn for typografien i stilartperioden, var at ordene blev gjort til lydord og de sprang ind i øjnene på tilskuerne, derudover benyttede kunstnerne sig også af tale -og tænkebobler, hvor typografien var mere nedtonet.</p>
@@ -42,9 +57,9 @@
     <section id="mood"><h1>Moodboard</h1></section>
     <section id="moodboard">
 
-        <img src="moodboard.JPG">
-        <img src="moodboard2.JPG">
-        <img src="moodboard3.JPG">
+        <img src="moodboard.JPG" alt="mood1">
+        <img src="moodboard2.JPG" alt="mood2">
+        <img src="moodboard3.JPG" alt="mood3">
     </section>
 
     <section id="style_indhold">
@@ -58,6 +73,6 @@
     <p> <a href="http://simonegrauer.dk/kea/01-web/03-ui/01_03_05_styletile_final/styletile.html">Styletile</a> </p>
     </section>
     </section>
-
+<footer><p>Udarbejdet af Simone Grauer</p></footer>
 </body>
 </html>
