--- a/ux.html
+++ b/ux.html
@@ -4,34 +4,78 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 
 <body>
     <header>
+
         <section id="logo">
-        <h1> Portfolio af Simone Grauer</h1></section>
-    <nav>
-        <a href="index.html#forside">Forside</a>
-        <a href="">Portfolio</a>
-        <a href="">Om mig</a>
-     <!-- <a href="">Tema 1 - Grundlæggende HTML</a>
-         <a href="">Tema 3 - Grundlæggende video</a>
-        <a href="">Tema 2 - Animation</a>
-        <a href="">Tema 4 - Grundlæggende UX</a>-->
+            <a href="index.html"><h1> Portfolio af Simone Grauer</h1></a>
+        </section>
+        <nav>
+            <ul>
+
+                <li><a href="cv.html">Om mig</a></li>
+                <li><a href="index.html#portfolio">Portfolio</a>
+                <ul>
+                    <li><a href="html.html">Tema 1</a></li>
+                    <li><a href="animation.html">Tema 2</a></li>
+                    <li><a href="video.html">Tema 3</a></li>
+                    <li><a href="ux.html">Tema 4</a></li>
+
+                    </ul>
+
+                </li>
+
+
+            <li><a href="index.html#forside">Forside</a></li>
+
+            </ul>
+
         </nav>
 
-        <section id="boks"></section>
+
 
     </header>
-</body>
+
     <section id="keaapp">
-    <h1>Kea App design</h1>
+        <div class="kea_design">
+        <img src="keapp.png" alt="kea"></div>
+
+        <section id="kea_overskrift">
+        <h1>Grundlæggende UX: Kea app</h1>
+            <p>Jeg har lavet en app til studerende på Kea, hvor det er muligt at se kommende begivenheder. Der er også et chatforum hvor det er muligt at stille spørgsmål og chatte med andre studerende, hvis man har brug for hjælp.</p>
+            <section id="kea_knap">
+            <p><a href="http://www.simonegrauer.dk/kea/04-ux/01-bruger/keaapp.html">Opgavebeskrivelse KEA app</a></p>
+            </section>
+        </section>
+
+
     </section>
+
+    <section id="boks"></section>
     <section id="joe">
-        <h1>Kundecase: Joe & the Juice</h1>
-    <p><a href="http://miepoulsen.dk/kea/04-ux/joe/">Dokumentationssite Joe & the Juice</a></p>
-   <p> <a href="https://docs.google.com/presentation/d/16iEbYXpuMEdSRMAlyDZV-yVxZzhCHD5yiPNZ5NNfmQA/edit#slide=id.p">Præstentation til Joe & the Juice</a></p>
+
+
+        <section id="joe_overskrift"><h1>Kundecase: Joe & the Juice</h1>
+            <p>Vi har prøvet at forbedre Joe & the Juice nuværende loyalty cards ved at tilføje et "pointsystem", så hvis man havde købt mange loyalty cards ville man opnå en fordel/rabat.</p>
+        <section id="joe_knap">
+            <p><a href="http://miepoulsen.dk/kea/04-ux/joe/">Dokumentationssite Joe & the Juice</a></p></section>
+            <section id="juice_knap">
+              <p> <a href="https://docs.google.com/presentation/d/16iEbYXpuMEdSRMAlyDZV-yVxZzhCHD5yiPNZ5NNfmQA/edit#slide=id.p">Præstentation til Joe & the Juice</a></p>
+            </section>
+
+
+        </section>
+
+    <div class="appdesign">
+        <img src="appdesign.png" alt="app">
+        </div>
+
     </section>
+    <footer><p>Udarbejdet af Simone Grauer</p></footer>
+    </body>
 </html>
