--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       <picture>
         <source media="(min-width: 1920px)" srcset="forside3.jpg">
 
+        <source media="(min-width: 1536px)" srcset="minstrjpg.jpg">
+
         <source media="(min-width: 1024px)" srcset="1024.jpg">
 
         <source media="(min-width: 768px)" srcset="768.jpg">
