--- a/ux.html
+++ b/ux.html
@@ -63,7 +63,7 @@
         <section id="joe_overskrift"><h1>Kundecase: Joe & the Juice</h1>
             <p>Vi har prøvet at forbedre Joe & the Juice nuværende loyalty cards ved at tilføje et "pointsystem", så hvis man havde købt mange loyalty cards ville man opnå en fordel/rabat.</p>
         <section id="joe_knap">
-            <p><a href="http://miepoulsen.dk/kea/04-ux/joe/">Dokumentationssite Joe & the Juice</a></p></section>
+            <p><a href="http://simonegrauer.dk/kea/04-ux/joe/joe/">Dokumentationssite Joe & the Juice</a></p></section>
             <section id="juice_knap">
               <p> <a href="https://docs.google.com/presentation/d/16iEbYXpuMEdSRMAlyDZV-yVxZzhCHD5yiPNZ5NNfmQA/edit#slide=id.p">Præstentation til Joe & the Juice</a></p>
             </section>
