--- a/ux.html
+++ b/ux.html
@@ -47,7 +47,7 @@
 
         <section id="kea_overskrift">
         <h1>Grundlæggende UX: Kea app</h1>
-            <p>Jeg har lavet en app til studerende på Kea, hvor det er muligt at se kommende begivenheder. Der er også et chatforum hvor det er muligt at stille spørgsmål og chatte med andre studerende, hvis man har brug for hjælp.</p>
+            <p>Jeg har lavet en app til studerende på Kea, hvor det er muligt at se kommende begivenheder. Der er også et chatforum hvor det er muligt at stille spørgsmål og chatte med andre studerende, hvis man har brug for hjælp. Præsentation af appen ligger i dokumentationsitet under "Præsentation af XD-prototype"</p>
             <section id="kea_knap">
             <p><a href="http://www.simonegrauer.dk/kea/04-ux/01-bruger/keaapp.html">Opgavebeskrivelse KEA app</a></p>
             </section>
