--- a/cv.html
+++ b/cv.html
@@ -70,12 +70,12 @@
         </section>
     </section>
 
-    <div class="main">
+    <div class="bar">
         <h1>Nuværende uddannelse:</h1>
-        <div class="progressBar">
-        <div class="title mmdColor">MMD</div>
-            <div class="progress mmd"></div>
-            <div class="progress_value">25%</div>
+        <div class="processBar">
+        <div class="titel mmdColor">MMD</div>
+            <div class="process mmd"></div>
+            <div class="process_vaerdi">25%</div>
         </div>
     </div>
 
